# backend/UBBGradePortal.Application/DTOs/Activity/AddSolvedActivityDto.cs
@@ -1,0 +1,6 @@
+﻿namespace UBBGradePortal.Application.DTOs.Activity;
+
+public record AddSolvedActivityDto(
+    Guid ActivityId,
+    Guid UserId,
+    List<AddSolvedActivityDocumentDto> SolvedActivityDocuments);
